docs: make endpoint for upgrade, show another user profile, approval admin, user upgrade and get list user request verify
